--- a/assets/styles/sections/_sections.scss
+++ b/assets/styles/sections/_sections.scss
@@ -2,5 +2,6 @@
 @import "login";
 
 @import "dashboard/dash-header";
+@import "dashboard/dash-footer";
 @import "dashboard/dash-panel";
 @import "dashboard/order-table";
