--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4853,6 +4853,23 @@ th a {
   width: 20px;
   height: 20px; }
 
+.site-footer {
+  margin: 5em 0 1em; }
+
+.site-footer h1 {
+  font-size: 1.4em;
+  text-align: right; }
+
+.footer-links {
+  list-style-type: none; }
+
+.footer-link {
+  display: inline-block;
+  margin-left: 1.4em; }
+
+.footer-link a {
+  color: #795548; }
+
 .dash-panel-list {
   list-style-type: none; }
 
