Tutorials for the front page

--- a/assets/styles/overrides/_overrides.scss
+++ b/assets/styles/overrides/_overrides.scss
@@ -34,3 +34,10 @@
     color: white;
   }
 }
+
+.introjs-button {
+  @extend .btn;
+  @extend .btn-primary;
+  text-shadow: none;
+  font: 14px/normal $font-family-sans-serif;
+}
